--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -47,10 +47,10 @@
     <app-root></app-root>
 
     <!-- Argon Scripts -->
-    <!-- Core -->
+    <!-- Core
     <script src="assets/vendor/jquery/dist/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Optional JS -->
+     Optional JS -->
     <script src="assets/vendor/chart.js/dist/Chart.min.js"></script>
     <script src="assets/vendor/chart.js/dist/Chart.extension.js"></script>
     <!-- Argon JS -->
